Starting work on the Server -- not working yet, but getting there

--- a/blok.toml
+++ b/blok.toml
@@ -1,2 +1,5 @@
 # todo: This will be used by the Blok Tower cli to set up dependendencies
 # soon -- just not quite yet.
+
+[site]
+name = "Blogish"
